# IoV-secureFL-Pipeline

./: .gitignore  LICENSE  Procfile  Procfile_stg1  Procfile_stg2  Procfile_stg3  README.md  cleansing_job.sh  data_split_gen.sh  first&second_milestone.ipynb  jobs_gen.sh  main.py  pyproject.toml  real_treenumberBAGGING_check.py  requirements.txt  run_experiment_simulator.sh  testCUDA_imports.py  test_imports.py
DP_SEED_report/: dp_tradeoff.csv  dp_tradeoff_C1.1_v3.csv  phase1_heldout_sweep.csv  seeds_comparing.csv  seeds_comparing_v3.csv
IoV-secureFL-Pipeline_awsEC2/: README.md  clean_fleet.sh  cleansing_job.sh  data_split_gen.sh  deploy_data.sh  evaluate.sh  example_project.yml  fleet_deployment.sh  fleet_ips.sh  jobs_gen.sh  jobs_id.txt  monitor_fleet.sh  network_provision.sh  project.yml  provision_cert_distribution.sh  pyproject.toml  run_experiment_simulator.sh  run_seed_sweep.sh  start_fleet.sh  xgboost_trees_diagnosis.py
IoV-secureFL-Pipeline_awsEC2/data/processed/: df_federated_100x.csv  df_server_test.csv  (+5 more)
IoV-secureFL-Pipeline_awsEC2/ec2Key/: iov-dp-key.pem
IoV-secureFL-Pipeline_awsEC2/models/: xgboost_model_inner.json  xgboost_model_outer.json
IoV-secureFL-Pipeline_awsEC2/randomSEED_report/: SEEDs_report.csv  SEEDs_report_OLD_C5.0_eps80.csv
IoV-secureFL-Pipeline_awsEC2/utils/: awsPLOT_seed_sweep.py  dpReport_visualization.py  generate_dp_report.py  model_validation.py  plot_seed_sweep.py  prepare_data_split.py  prepare_job_config.py
IoV-secureFL-Pipeline_awsEC2S3/: .gitignore  README.md  clean_fleet.sh  cleansing_job.sh  data_split_gen.sh  fleet_deployment.sh  jobs_gen.sh  monitor_fleet.sh  network_provision.sh  provision_cert_distribution.sh  start_fleet.sh
IoV-secureFL-Pipeline_awsEC2S3/ec2Key/: aws_rsa_key  iov-dp-key.pem
IoV-secureFL-Pipeline_awsEC2S3/utils/: patch_nvflare.py  prepare_data_split.py  prepare_job_config.py
data/processed/: dataset_info.md
model/: federated_global_rf.pkl
notebooks/: 01_reproducing_exploration_baseline.ipynb
reports/: dp_tradeoff.csv  phase1_seed_sweep.csv
src/federated/: client.py  client_stage2.py  client_stage20.py  server.py  server_stage23.py  tracker.py
utils/: clippingValues.py  dpReport_visualization.py  generate_dp_report.py  model_validation.py  phase1_plot_seed_sweep.py  phase_comparison_plot.py  plot_seeds_compare.py  prepare_data_split.py  prepare_job_config.py
(+29 files in other folders)
