[project]
name = "iov-securefl-pipeline"
version = "0.1.0"
requires-python = ">=3.12, <3.13"  # Stick to 3.12 for maximum wheel compatibility
dependencies = [
    "flwr[simulation]==1.26.1",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "numpy>=2.0.0,<2.1.0",
    "opacus>=1.5.4",
    "pandas>=2.2.0",        # Loosened for compatibility
    "pyarrow>=15.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    #"torch>=2.10.0",
    #"torchaudio>=2.10.0",
    #"torchvision>=0.25.0",
    "tqdm>=4.66.0",
    "cryptography>=44.0.3",
    "kafka-python-ng>=2.2.3",
    "matplotlib>=3.10.8",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true  # VERY IMPORTANT: Only use this index when we explicitly ask
