[project]
name = "iov-securefl-pipeline"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.0.0,<2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "cryptography>=44.0.3",
    "kafka-python-ng>=2.2.3",
    "honcho>=2.0.0",
    "jupyter>=1.0.0",
    "xgboost>=3.2.0",
    "shap>=0.51.0",
    "omegaconf>=2.3.0",
    "nvflare>=2.7.1",
]

[[tool.uv.index]]
xgboost = { url = "https://s3-us-west-2.amazonaws.com/xgboost-nightly-builds/federated-secure/xgboost-2.2.0.dev0%2B4601688195708f7c31fcceeb0e0ac735e7311e61-py3-none-manylinux_2_28_x86_64.whl"}
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true